[tool.poetry]
name = "umapi-cli"
version = "0.6.1"
description = "User Management API CLI Tool"
authors = ["Andrew Dorton <adorton@adobe.com>"]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.0"
click = "^7.0"
umapi-client = "^2.15"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pyinstaller = "^3.5"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4"

[tool.poetry.scripts]
umapi = 'umapi_cli.cli:app'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
