[tool.poetry]
name = "umapi-cli"
version = "2.0.0a1"
description = "User Management API CLI Tool"
authors = ["Andrew Dorton <adorton@adobe.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0"
umapi-client = "^3.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pyinstaller = "^3.5"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4"
schema = "^0.7.5"

[tool.poetry.scripts]
umapi = 'umapi_cli.cli:app'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
