[tool.poetry]
name = "umapi-cli"
version = "2.0.0"
description = "User Management API CLI Tool"
authors = ["Andrew Dorton <adorton@adobe.com>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/adobe/umapi-cli/"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0"
umapi-client = "^3.0"
python-dotenv = "^1.0.0"
schema = "^0.7.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pyinstaller = { version = "^5.13.0", python = ">=3.9,<3.13" }
pywin32-ctypes = "^0.2.0"
pefile = "^2022.5"
macholib = {version = "^1.16.2", platform = "darwin"}

[tool.poetry.scripts]
umapi = 'umapi_cli.cli:entry'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
